src/test/testData/parser/good/StatementMenu.basic
Menu("TEST","OPTION 1",AB,"OPTION 2",2)