src/test/testData/parser/bad/StatementMenu.basic
Menu
Menu(
Menu("TEST"
Menu("TEST",
Menu("TEST","OPTION 1"
Menu("TEST","OPTION 1",
Menu("TEST","OPTION 1",ABC